src/objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>BST_BOOST_Price_Book_Entry_ID__c</fullName>
        <displayFormat>PBE-{00000}</displayFormat>
        <label>BOOST Price Book Entry ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BST_Price_Book_Entry_P1__c</fullName>
        <defaultValue>1</defaultValue>
        <description>BST - This field is used for analytics</description>
        <label>Price Book Entry P1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BXGO_Floor_Price__c</fullName>
        <label>Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BXGO_Target_Price__c</fullName>
        <label>Target Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>BXGO_Target_greater_equal_limit</fullName>
        <active>true</active>
        <errorConditionFormula>!(BXGO_Target_Price__c &gt;=  BXGO_Floor_Price__c)</errorConditionFormula>
        <errorMessage>Target price has to be greater or equal to the floor price.</errorMessage>
    </validationRules>
</CustomObject>